# monoid-subclasses

./: BSD3-LICENSE.txt  CHANGELOG.md  README.md  monoid-subclasses.cabal  monoid-subclasses.cabal.package
.github/workflows/: haskell-ci.yml
Data/Monoid/: Cancellative.hs  Factorial.hs  GCD.hs  Monus.hs  Null.hs  Textual.hs
Data/Monoid/Instances/: CharVector.hs  Concat.hs  Measured.hs  Positioned.hs  Stateful.hs
Data/Monoid/Instances/ByteString/: UTF8.hs
Data/Semigroup/: Cancellative.hs  Factorial.hs
Test/: TestMonoidSubclasses.hs
src/Data/Monoid/: Cancellative.hs  Factorial.hs  GCD.hs  LCM.hs  Monus.hs  Null.hs  Textual.hs
src/Data/Monoid/Instances/: CharVector.hs  Concat.hs  Measured.hs  Positioned.hs  PrefixMemory.hs  Stateful.hs
src/Data/Monoid/Instances/ByteString/: UTF8.hs
src/Data/Semigroup/: Cancellative.hs  Factorial.hs
