Name:                monoid-subclasses
Version:             1.0.1
Cabal-Version:       >= 1.10
Build-Type:          Simple
Synopsis:            Subclasses of Monoid
Category:            Data, Algebra, Text
Tested-with:         GHC
Description:
  A hierarchy of subclasses of 'Monoid' together with their instances for all data structures from base, containers, and
  text packages.
  
License:             BSD3
License-file:        BSD3-LICENSE.txt
Copyright:           (c) 2013-2018 Mario Blažević
Author:              Mario Blažević
Maintainer:          Mario Blažević <blamario@protonmail.com>
Homepage:            https://github.com/blamario/monoid-subclasses/
Bug-reports:         https://github.com/blamario/monoid-subclasses/issues
Extra-Source-Files:  README.md, CHANGELOG.md
Source-repository head
  type:              git
  location:          https://github.com/blamario/monoid-subclasses

Library
  hs-source-dirs:    src
  Exposed-Modules:   Data.Semigroup.Cancellative, Data.Semigroup.Factorial,
                     Data.Monoid.Cancellative, Data.Monoid.GCD, Data.Monoid.Monus,
                     Data.Monoid.Factorial, Data.Monoid.Null, Data.Monoid.Textual,
                     Data.Monoid.Instances.ByteString.UTF8, Data.Monoid.Instances.CharVector,
                     Data.Monoid.Instances.Concat, Data.Monoid.Instances.Measured, Data.Monoid.Instances.Positioned,
                     Data.Monoid.Instances.Stateful
  Build-Depends:     base >= 4.11 && < 5,
                     bytestring >= 0.9 && < 1.0, containers >= 0.5.7.0 && < 0.7, text >= 0.11 && < 1.3,
                     primes == 0.2.*, vector >= 0.12 && < 0.13
  GHC-options:       -Wall
  default-language:  Haskell2010

test-suite Main
  Type:              exitcode-stdio-1.0
  Build-Depends:     base >= 4.11 && < 5,
                     bytestring >= 0.9 && < 1.0, containers >= 0.5.7.0 && < 0.7, text >= 0.11 && < 1.3,
                     vector >= 0.12 && < 0.13, primes == 0.2.*,
                     QuickCheck >= 2.9 && < 3, quickcheck-instances >= 0.3.12 && <0.4,
                     tasty >= 0.7, tasty-quickcheck >= 0.7 && < 1.0,
                     monoid-subclasses
  Main-is:           Test/TestMonoidSubclasses.hs
  default-language:  Haskell2010
